--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_NAMETheologyGuruBot 📖'
+BOT_NAME='TheologyGuruBot'
 BOT_API=7794586269:AAGyvlhaJd9kag0OW38kSmEeysK-rLk3nus
 
 API='5f101ebcb889ba7655580c51216ff779'
